--- a/example/src/styles.css
+++ b/example/src/styles.css
@@ -3,8 +3,16 @@
   font-size: 16px;
 }
 .topbar {
-  padding: 10px;
+  padding: 10px 0 0 0;
   border-bottom: 1px dotted #ddd;
+  display: flex;
+}
+.topbar a {
+  margin: 0px 3px;
+  padding: 10px;
+  border-top: 1px dotted #ddd;
+  border-right: 1px dotted #ddd;
+  border-left: 1px dotted #ddd;
 }
 
 .topbar button {
